[package]
name = "nba"
version = "0.1.0"
authors = ["Dustin Cannon <dustinc@flyingcroc.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# cli arg parsing
structopt = "0.3.13"

# nicer error handling
anyhow = "1.0"

# rust netbox library
rustnb = "0.1.4"

regex = "1"

reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
http = "0.2"
log = "0.4.0"
env_logger = "0.8.4"
lazy_static = "1.4.0"
